--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Semilla2025.loader.js";
+      var loaderUrl = buildUrl + "/New folder.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Semilla2025.data.unityweb",
-        frameworkUrl: buildUrl + "/Semilla2025.framework.js.unityweb",
-        codeUrl: buildUrl + "/Semilla2025.wasm.unityweb",
+        dataUrl: buildUrl + "/New folder.data.unityweb",
+        frameworkUrl: buildUrl + "/New folder.framework.js.unityweb",
+        codeUrl: buildUrl + "/New folder.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Mucho Games",
         productName: "Semilla",
